fix: overflow, show-loading & html decode.

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -3,6 +3,10 @@
  * Framework overrides and customization goes here.
  */
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: nimbus-sans-extended, sans-serif;
   font-weight: 400;
